try to fix background cover on mobile

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -28,6 +28,8 @@ body::before {
   bottom: 0;
   top: 0;
   position: fixed;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 p, ol, ul, td {
