--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -101,6 +101,8 @@
   }
 
   .footer {
+    margin: 20px auto;
+
     .footer-content {
       box-sizing: border-box;
       margin: 20px 10px;
